force-app/main/default/objects/Opportunity/fields/Deposit_Paid__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deposit Paid</label>
    <type>Checkbox</type>
</CustomField>