force-app/main/default/objects/Opportunity/fields/Feasibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Feasibility_Status__c</fullName>
    <label>Feasibility Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Feasible</fullName>
            </value>
            <value>
                <fullName>Shortfall-Replenishable</fullName>
                <label>Shortfall - Replenishable</label>
            </value>
            <value>
                <fullName>Not-Feasible</fullName>
                <label>Not Feasible</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>